--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello world!</p>
+    <p>git add -Hello my world!</p>
     <script src="js/script.js" ></script>
 </body>
 </html>
